# atom

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  imgui.ini
Frameworks/: libGLEW.2.2.0.dylib  libSDL2-2.0.0.dylib  libSDL2_image-2.0.0.dylib  libSDL2_mixer-2.0.0.dylib  libfreetype.6.dylib  libglfw.3.3.dylib  libglib-2.0.0.dylib  libgraphite2.3.dylib  libharfbuzz.0.dylib  libintl.8.dylib  libjpeg.8.dylib  libmodplug.1.dylib  libmpg123.0.dylib  libogg.0.dylib  libpcre2-8.0.dylib  libpng16.16.dylib  libtiff.5.dylib  libvorbis.0.dylib  libvorbisfile.3.dylib  libwebp.7.dylib
Resources/: vertex
Resources/dialogue/: idea.txt  text.txt  weird_test.txt
Resources/shaders/: fragmentShader.fragment  vertexshader.vertex
Resources/test/: Cowboy.txt  Info.plist  example.scene  (+2 more)
libs/: libFLAC.12.dylib  libGLEW.2.2.0.dylib  libSDL2-2.0.0.dylib  libSDL2_image-2.0.0.dylib  libSDL2_mixer-2.0.0.dylib  libavif.15.0.1.dylib  libbrotlicommon.1.0.9.dylib  libbrotlidec.1.0.9.dylib  libbrotlienc.1.0.9.dylib  libfluidsynth.3.2.0.dylib  libglfw.3.3.dylib  libglib-2.0.0.dylib  libgthread-2.0.0.dylib  libhwy.1.0.4.dylib  libintl.8.dylib  libjpeg.8.2.2.dylib  libjxl.0.8.1.dylib  liblcms2.2.dylib  libmp3lame.0.dylib  libmpg123.0.dylib  libopus.0.dylib  libopusfile.0.dylib  libpcre2-8.0.dylib  libpng16.16.dylib  libportaudio.2.dylib  libreadline.8.2.dylib  libsharpyuv.0.0.0.dylib  libsndfile.1.0.35.dylib  libtiff.6.dylib  libvmaf.1.dylib  libvorbis.0.dylib  libvorbisenc.2.dylib  libvorbisfile.3.dylib  libwebp.7.1.6.dylib  libxmp.4.dylib  libzstd.1.5.5.dylib
src/: main.cpp
(+97 files in other folders)
